add reservation features
