# src/reservations/dto/use-reservation.dto.ts
@@ -1,0 +1,10 @@
+import { ApiProperty } from "@nestjs/swagger";
+import { IsUUID } from "class-validator";
+
+export class UseReservationDto {
+    @ApiProperty({
+        example: '550e8400-e29b-41d4-a716-446655440000',
+    })
+    @IsUUID()
+    id: string;
+}
